<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ScrollView
                android:id="@+id/addDirectoryTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        style="@style/Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_av_protection_rtp_monitor_options" />

                    <TextView
                        style="@style/TextMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/str_av_protection_rtp_monitor_flags_description" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyAccess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_av_protection_rtp_monitor_notify_access" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyModify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_av_protection_rtp_monitor_notify_modify" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyAttrib"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_av_protection_rtp_monitor_notify_attrib" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyCloseWrite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/str_av_protection_rtp_monitor_notify_close_write" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyCloseNoWrite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_av_protection_rtp_monitor_notify_close_no_write" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyOpen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_av_protection_rtp_monitor_notify_open" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyMovedFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_av_protection_rtp_monitor_notify_moved_from" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyMovedTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/str_av_protection_rtp_monitor_notify_moved_to" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyCreate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/str_av_protection_rtp_monitor_notify_create" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_av_protection_rtp_monitor_notify_delete" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyMoveSelf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/str_av_protection_rtp_monitor_notify_move_self" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/cbNotifyDeleteSelf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_av_protection_rtp_monitor_notify_delete_self" />

                    <Button
                        android:filterTouchesWhenObscured="true"
                        android:id="@+id/btnAddFolder"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/str_av_protection_rtp_monitor_btn_add_folder" />

                    <Button
                        android:filterTouchesWhenObscured="true"
                        android:id="@+id/btnAddDefaultFolders"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/str_av_protection_rtp_monitor_btn_add_default_folders" />

                    <Button
                        android:filterTouchesWhenObscured="true"
                        android:id="@+id/btnRemoveDefaultFolders"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/str_av_protection_rtp_monitor_btn_remove_default_folders" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/directoriesTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_av_protection_rtp_monitor_monitored_directories" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#30ffffff" >

                    <ListView
                        android:id="@+id/lstMonitoredFolders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/exclusionsTab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_av_protection_rtp_monitor_exclusions_note"
                    style="@style/TextMedium"/>
                
                <Button
                    android:filterTouchesWhenObscured="true"
                    android:id="@+id/btnAddExclusionFolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_av_protection_rtp_monitor_btn_add_folder" />

                <TextView
                    style="@style/Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_av_protection_rtp_monitor_excluded_directories" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#30ffffff" >

                    <ListView
                        android:id="@+id/lstExcludedFolders"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </FrameLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>